# rag-projesi

./: .dockerignore  .env.example  .gitignore  00_MASTER_BASLAT.bat  00_setup.bat  100_open_desktop_app.bat  100_open_desktop_app.vbs  100_run_app.bat  101_stop_app.bat  10_start_infra.bat  110_run_modern_app.bat  111_open_project_preview.bat  112_open_full_system.bat  120_desktop_app.bat  130_build_desktop_exe.bat  20_ingest_live.bat  21_auto_ingest_start.bat  22_auto_ingest_status.bat  23_auto_ingest_stop.bat  24_auto_ingest_configure.bat  25_seed_eval_corpus.bat  26_auto_ingest_run_once.bat  27_auto_ingest_use_production.bat  30_run_api.bat  31_validate_provider.bat  32_start_ollama.bat  35_run_streamlit.bat  36_run_web_ui.bat  50_eval.bat  60_demo_flow.bat  70_stop_services.bat  80_release_bundle.bat  90_github_ready.bat  95_publish_git.bat  99_full_pipeline.bat  CODEX_TASKS.md  Dockerfile  Dockerfile.worker  README.md  desktop.spec  (+11 more)
.claude/: settings.local.json
app/: alerts.py  config.py  guardrails.py  guardrails_claims.py  jobs.py  schemas.py  service.py
config/: ticker_aliases.json
datasets/: eval_questions.json
docs/: app_quickstart.md  architecture.mmd  final_demo_script.md  github_ready_status.md  index.html  latest_run_summary.md  production_readiness.md  release_checklist.md  rubric_details.html  rubric_mapping.md  runbook.md  tradeoff_matrix.md  troubleshooting.md
frontend/: package-lock.json  package.json
scripts/: __init__.py  auto_ingest_ctl.py  build_release_bundle.py  debug_audit_chain.py  demo_flow.py  desktop_app.py  export_latest_summary.py  (+13 more)
(+112 files in other folders)
