[project]
name = "bist-agentic-rag"
version = "1.3.0"
description = "Agentic RAG system for Turkish equity market intelligence (BIST/KAP/News/Broker)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BIST Agentic RAG Team" }]
license = { text = "Proprietary" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

